# ACCA2022-new

./: .gitignore  B2100.txt  B2101.txt  B2102.txt  B2103.txt  B2104.txt  README.md  frames.gv  path.db  path_planobstacle_parking.db
adaptive_clustering/launch/: adaptive_clustering.launch
adaptive_clustering/src/: adaptive_clustering.cpp
cone_tracker/: cone.rviz  manifest.xml
cone_tracker/launch/: cone.rviz  cone_track.launch  navsat_transform.launch
cone_tracker/params/: navsat_transform.yaml
cone_tracker/src/: clustering.py  cone.py  cone_kalman.py  cone_mapping.py  cone_select.py  cone_simulator.py  cone_tracker.py  cone_tracker2.py  cone_tracker3.py  cone_tracker_test.py  dynamic_window_approach.py  gaussian.py  gps_odometry.py  gps_odometry_test.py  grid_map.py  kalman_odometry.py  test.py
conetrack/: manifest.xml
control/: package.xml
control/msg/: stanleyMsg.msg
control/src/: global_stanley.py  loadPose.py  stanley.py  state.py
erp42/erp42_communication/: CMakeLists.txt  README.md  manifest.xml
erp42/erp42_control/: CMakeLists.txt  package.xml
erp42/erp42_msgs/: CMakeLists.txt
gps_localizer/: manifest.xml
gps_localizer/src/: aaa.py  gps_input_param.py  gps_localization.py  gps_rviz.rviz  gps_test_01.py  k-city.csv  k-city_02.csv  k-city_03.csv  k-city_03test.csv  k-city_04.csv  k-city_05.csv  k-city_06.csv  k-city_07.csv  k-city_08.csv  k-city_10.csv  k-city_12.csv  k-city_13.csv  kcyti-01.csv  school.csv  school_coordinate.csv
hdl/hdl_localization/: CMakeLists.txt
hdl/ndt_omp/: CMakeLists.txt
lidar_camera_calibration/: CMakeLists.txt  calibration.yaml
lidar_camera_calibration/cluster/: Kdtree.py  adaptiveclu.py  dbscan.py  main.py  test.py
lidar_camera_calibration/launch/: camera_calibration.launch  display_camera_calibration.launch  display_camera_lidar_calibration.launch
lidar_camera_calibration/msg/: Boxregion.msg  BoxregionArray.msg
lidar_camera_calibration/scripts/: 3d_to_2d.py  adapt_yolo.py  apfhd.py  cali.py  calibrate_camera_lidar.py  contrast.py  deliveryAB.py  delivery_stop.py  framechange.py  nearmarker.py  sign.py  sign_search.py  update_camera_info.py  yolo_falsedata.py  yolonum.py
local_path_test/AStar/: a_star.py  reeds_shepp_path_planning.py
local_path_test/RRT/: rrt_with_sobol_sampler.py
map_matching_localization/: CMakeLists.txt  package.xml
map_matching_localization/data/: kcity1.csv  kcity2.csv  kcity_ys1.csv  kcity_ys2.csv  left.csv  right.csv  test.csv  test2.csv
map_matching_localization/launch/: gps_logger.launch  gps_tracker.launch  kalman_localization.launch  localization.launch  map_matching_localization.launch  ndt_test_localization.launch  test.launch  tf.launch  tf_test.launch
map_matching_localization/msg/: Error.msg  HdlTF.msg
map_matching_localization/rviz/: rviz.rviz
map_matching_localization/src/: gaussian.py  gaussian_cross.py  global_localizer.py  global_localizer2.py  gps_logger.py  gps_tracker.py  hdl_tf.py  header.py  kalman.py  kalman2.py  kalman3.py  kalman4.py  kalman_odometry.py  map_error.py  map_matching.py  odom_tf.py  pcl_test.py  relocalizer.py  test.py  test2.py  test_logger.py  tf_test.py  tf_test2.py  velodyne_points2.py
map_matching_localization/src/unused/: CMakeLists.txt  downsampling.py  gaussian_cross.py  grid.py  hdl_tf.py  header.py  kalman.py  kalman2.py  kalman3.py  kalman4.py  kalman_test.py  manifest.xml  map_matching.py  map_odom_tf_publisher.cpp  odom_tf.py  point_cloud.py  t.py  tf_test.py  tf_test3.py
mission/: CMakeLists.txt  package.xml
mission/data/: static_test.csv
mission/msg/: BoundingBox.msg  BoundingBoxes.msg  Signmsg.msg  obTF.msg
mission/src/: clustering.py  conetrack.py  cubic_spline_planner.py  cut_image.py  delivery.py  deliveryAB copy.py  deliveryAB.py  dynamic.py  dynamic_2d_test.py  dynamic_2d_test_map.py  dynamic_2d_test_odom.py  dynamic_ob.py  dynamic_sc.py  obstacle.py  obstacle_final.py  obstacle_final_csv.py  obstacle_final_csv_sc_bs.py  obstacle_final_csv_ys.py  obstacle_remove.py  parking_final.py  parking_final_2.py  parking_final_csv.py  parking_sc_ys.py  parking_ys.py  parkingtest.py  sign_search.py  static_bs.py  static_sc_bs.py  static_sc_ys.py  static_ys.py  test.py  traffic.py
monitor_server/: app.js  package-lock.json  package.json
monitor_server/routes/: gps_logger.js  index.js  path.js  topic.js  waypoint.js
monitor_server/views/: gps_logger.ejs  index.ejs  partial.ejs  savepath.ejs  topic.ejs  waypoint.ejs
ndt/Localization_ERP42/: CMakeLists.txt  package.xml
ndt/currvel/: CMakeLists.txt  package.xml
ndt/currvel/include/: currvel.hpp
ndt/currvel/launch/: currvel.launch  ndt_pose_local.csv
ndt/currvel/src/: currvel.cpp
ndt/ekf_localizer/: CMakeLists.txt
ndt/integration_launch/: CMakeLists.txt  package.xml
ndt/integration_launch/launch/: integration_launch.launch
ndt/map2localTF/: CMakeLists.txt  package.xml
ndt/map2localTF/include/: map2localTF.hpp
ndt/map2localTF/launch/: map2localTF.launch
ndt/map2localTF/src/: map2localTF.cpp  map2localTF_backup.cpp
ndt/ndt_matching/: CMakeLists.txt  package.xml
obstacle/: all.rviz  manifest.xml  obstacle.rviz
obstacle/data/: -home-acca-sig_img-.txt  .~lock.area_school.csv#  area_school.csv  center1.csv  left.csv  left1.csv  path.csv  right.csv  right1.csv
obstacle/src/: obstacle_final.py  obstacle_orientation.py  obstacle_remove.py  obstacle_test.py  parking2.py  parking3.py  parking_final.py  parkingtest.py
parking/: CMakeLists.txt  manifest.xml  my_plan.txt  package.xml
parking/launch/: parking.launch  tf_test.launch
parking/msg/: surround_obstacle.msg
parking/parking/: bs_parking.csv  festi_parking.csv  hor_parking.csv  hor_parking2.csv  hor_parking3.csv  hor_parking5.csv  parking.csv  parking2.csv  (+3 more)
path_plan/: 0903_test.db  0909_ys.db  0916_bs.db  0924_bs.db  CMakeLists.txt  festi.db  jin.db  jin0.db  jo.db  kcity_02.db  kcity_0715.db  kcity_0722.db  kcity_bs.db  kcity_path.db  obstacle_parking.db  package.xml  path.db  path.db-journal  path2.db  school_bs.db  school_test.db  school_ys.db
state_machine/: manifest.xml
(+238 files in other folders)
