<?xml version="1.0"?>
<package format="2">
  <name>integration_launch</name>
  <version>0.0.0</version>
  <description>The integration_launch package</description>
  <maintainer email="jiwon@todo.todo">autoware</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
